[gd_scene load_steps=6 format=3 uid="uid://beegt64waecq2"]

[ext_resource type="Script" path="res://Script/esc_menu.gd" id="1_w3cxc"]
[ext_resource type="Texture2D" uid="uid://oajoatrwa1q4" path="res://Textúra/banner 1.png" id="2_nfrwd"]
[ext_resource type="FontFile" uid="uid://qh1gu7xah85u" path="res://SWINPH.ttf" id="3_01o22"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4yq5r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nxpi"]
bg_color = Color(1, 0, 0, 1)

[node name="esc_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w3cxc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 126.0
offset_right = 2046.0
offset_bottom = 1080.0
texture = ExtResource("2_nfrwd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 673.0
offset_top = 196.0
offset_right = 1231.0
offset_bottom = 312.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_01o22")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_4yq5r")
text = "VISSZA A MENŰBE"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_01o22")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_4yq5r")
text = "BEÁLLÍTÁSOK"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_01o22")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_4yq5r")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nxpi")
text = "KILÉPÉS"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
